# homie-cli

./: CLAUDE.md  Dockerfile.gpu  Dockerfile.worker  QUICK_START.txt  README.md  REMOTE_SETUP.md  SEND_TO_FRIENDS.md  SETUP_FOR_HOMIES.md  cpu_test.py  gpu_test.py  install.sh  plan.md  pyproject.toml  setup.py  test_script.py
examples/ml-training/: Dockerfile  QUICK_START.md  README.md  USAGE.md  requirements.txt  train.py
examples/ml-training/configs/: config.json
examples/ml-training/src/: __init__.py  data_loader.py  model.py  utils.py
homie/: __init__.py  cli.py  client.py  config.py  container.py  discovery.py  history.py  jobs.py  mesh.py  ui.py  utils.py  worker.py
homie_compute.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
