[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "homie-compute"
version = "0.1.0"
description = "P2P distributed compute for friends on the same network"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "psutil>=5.9",
    "rich>=13.0",
    "docker>=7.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
ray = ["ray[default]>=2.9.0"]

[project.scripts]
homie = "homie.cli:cli"
